k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memorang-frontend-deploy-prod
  labels:
    app: memorang-frontend-prod
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: memorang-frontend-prod
  template:
    metadata:
      labels:
        app: memorang-frontend-prod
    spec:
      nodeSelector:
        node-type: regular
      imagePullSecrets:
      - name: acr-secret
      containers:
      - name: memorang-frontend-prod
        image: tickertom.azurecr.io/memorang-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: mem-fe-pod-port
